rstsr-mkl-ffi/src/cblas/ffi_extern.rs

    pub fn cblas_zaxpy_batch_strided(
        N: MKL_INT,
        alpha: *const c_void,
        X: *const c_void,
        incX: MKL_INT,
        stridex: MKL_INT,
        Y: *mut c_void,
        incY: MKL_INT,
        stridey: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_scopy_batch(
        n: *const MKL_INT,
        x: *mut *const f32,
        incx: *const MKL_INT,
        y: *mut *mut f32,
        incy: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_dcopy_batch(
        n: *const MKL_INT,
        x: *mut *const f64,
        incx: *const MKL_INT,
        y: *mut *mut f64,
        incy: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_ccopy_batch(
        n: *const MKL_INT,
        x: *mut *const c_void,
        incx: *const MKL_INT,
        y: *mut *mut c_void,
        incy: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_zcopy_batch(
        n: *const MKL_INT,
        x: *mut *const c_void,
        incx: *const MKL_INT,
        y: *mut *mut c_void,
        incy: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_scopy_batch_strided(
        N: MKL_INT,
        X: *const f32,
        incX: MKL_INT,
        stridex: MKL_INT,
        Y: *mut f32,
        incY: MKL_INT,
        stridey: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_dcopy_batch_strided(
        N: MKL_INT,
        X: *const f64,
        incX: MKL_INT,
        stridex: MKL_INT,
        Y: *mut f64,
        incY: MKL_INT,
        stridey: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_ccopy_batch_strided(
        N: MKL_INT,
        X: *const c_void,
        incX: MKL_INT,
        stridex: MKL_INT,
        Y: *mut c_void,
        incY: MKL_INT,
        stridey: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_zcopy_batch_strided(
        N: MKL_INT,
        X: *const c_void,
        incX: MKL_INT,
        stridex: MKL_INT,
        Y: *mut c_void,
        incY: MKL_INT,
        stridey: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_sgemv_batch(
        Layout: CBLAS_LAYOUT,
        TransA: *const CBLAS_TRANSPOSE,
        M: *const MKL_INT,
        N: *const MKL_INT,
        alpha: *const f32,
        A: *mut *const f32,
        lda: *const MKL_INT,
        X: *mut *const f32,
        incX: *const MKL_INT,
        beta: *const f32,
        Y: *mut *mut f32,
        incY: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_sgemv_batch_strided(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        alpha: f32,
        A: *const f32,
        lda: MKL_INT,
        stridea: MKL_INT,
        X: *const f32,
        incX: MKL_INT,
        stridex: MKL_INT,
        beta: f32,
        Y: *mut f32,
        incY: MKL_INT,
        stridey: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_dgemv_batch(
        Layout: CBLAS_LAYOUT,
        TransA: *const CBLAS_TRANSPOSE,
        M: *const MKL_INT,
        N: *const MKL_INT,
        alpha: *const f64,
        A: *mut *const f64,
        lda: *const MKL_INT,
        X: *mut *const f64,
        incX: *const MKL_INT,
        beta: *const f64,
        Y: *mut *mut f64,
        incY: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_dgemv_batch_strided(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        alpha: f64,
        A: *const f64,
        lda: MKL_INT,
        stridea: MKL_INT,
        X: *const f64,
        incX: MKL_INT,
        stridex: MKL_INT,
        beta: f64,
        Y: *mut f64,
        incY: MKL_INT,
        stridey: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_cgemv_batch(
        Layout: CBLAS_LAYOUT,
        TransA: *const CBLAS_TRANSPOSE,
        M: *const MKL_INT,
        N: *const MKL_INT,
        alpha: *const c_void,
        A: *mut *const c_void,
        lda: *const MKL_INT,
        X: *mut *const c_void,
        incX: *const MKL_INT,
        beta: *const c_void,
        Y: *mut *mut c_void,
        incY: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_cgemv_batch_strided(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        stridea: MKL_INT,
        X: *const c_void,
        incX: MKL_INT,
        stridex: MKL_INT,
        beta: *const c_void,
        Y: *mut c_void,
        incY: MKL_INT,
        stridey: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_zgemv_batch(
        Layout: CBLAS_LAYOUT,
        TransA: *const CBLAS_TRANSPOSE,
        M: *const MKL_INT,
        N: *const MKL_INT,
        alpha: *const c_void,
        A: *mut *const c_void,
        lda: *const MKL_INT,
        X: *mut *const c_void,
        incX: *const MKL_INT,
        beta: *const c_void,
        Y: *mut *mut c_void,
        incY: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_zgemv_batch_strided(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        stridea: MKL_INT,
        X: *const c_void,
        incX: MKL_INT,
        stridex: MKL_INT,
        beta: *const c_void,
        Y: *mut c_void,
        incY: MKL_INT,
        stridey: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_sdgmm_batch(
        layout: CBLAS_LAYOUT,
        side: *const CBLAS_SIDE,
        m: *const MKL_INT,
        n: *const MKL_INT,
        a: *mut *const f32,
        lda: *const MKL_INT,
        x: *mut *const f32,
        incx: *const MKL_INT,
        c: *mut *mut f32,
        ldc: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_sdgmm_batch_strided(
        layout: CBLAS_LAYOUT,
        side: CBLAS_SIDE,
        m: MKL_INT,
        n: MKL_INT,
        a: *const f32,
        lda: MKL_INT,
        stridea: MKL_INT,
        x: *const f32,
        incx: MKL_INT,
        stridex: MKL_INT,
        c: *mut f32,
        ldc: MKL_INT,
        stridec: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_ddgmm_batch(
        layout: CBLAS_LAYOUT,
        side: *const CBLAS_SIDE,
        m: *const MKL_INT,
        n: *const MKL_INT,
        a: *mut *const f64,
        lda: *const MKL_INT,
        x: *mut *const f64,
        incx: *const MKL_INT,
        c: *mut *mut f64,
        ldc: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_ddgmm_batch_strided(
        layout: CBLAS_LAYOUT,
        side: CBLAS_SIDE,
        m: MKL_INT,
        n: MKL_INT,
        a: *const f64,
        lda: MKL_INT,
        stridea: MKL_INT,
        x: *const f64,
        incx: MKL_INT,
        stridex: MKL_INT,
        c: *mut f64,
        ldc: MKL_INT,
        stridec: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_cdgmm_batch(
        layout: CBLAS_LAYOUT,
        side: *const CBLAS_SIDE,
        m: *const MKL_INT,
        n: *const MKL_INT,
        a: *mut *const c_void,
        lda: *const MKL_INT,
        x: *mut *const c_void,
        incx: *const MKL_INT,
        c: *mut *mut c_void,
        ldc: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_cdgmm_batch_strided(
        layout: CBLAS_LAYOUT,
        side: CBLAS_SIDE,
        m: MKL_INT,
        n: MKL_INT,
        a: *const c_void,
        lda: MKL_INT,
        stridea: MKL_INT,
        x: *const c_void,
        incx: MKL_INT,
        stridex: MKL_INT,
        c: *mut c_void,
        ldc: MKL_INT,
        stridec: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_zdgmm_batch(
        layout: CBLAS_LAYOUT,
        side: *const CBLAS_SIDE,
        m: *const MKL_INT,
        n: *const MKL_INT,
        a: *mut *const c_void,
        lda: *const MKL_INT,
        x: *mut *const c_void,
        incx: *const MKL_INT,
        c: *mut *mut c_void,
        ldc: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_zdgmm_batch_strided(
        layout: CBLAS_LAYOUT,
        side: CBLAS_SIDE,
        m: MKL_INT,
        n: MKL_INT,
        a: *const c_void,
        lda: MKL_INT,
        stridea: MKL_INT,
        x: *const c_void,
        incx: MKL_INT,
        stridex: MKL_INT,
        c: *mut c_void,
        ldc: MKL_INT,
        stridec: MKL_INT,
        batch_size: MKL_INT,
    );
}
